# rust-capataz

./: .clippy.toml  .commitsar.yaml  .envrc  .gitignore  Cargo.nix  Cargo.toml  Makefile  ci-nightly.nix  ci-stable.nix  flake.nix  rust-toolchain  rust-toolchain.toml  shell.nix
.github/workflows/: test.yml
infra/nix/: pre-commit.nix
infra/nix/tools/: commitsar.nix
nix/: packages.nix  pre-commit.nix  sources.json
nix/devenvs/: default.nix
nix/grcov/: default.nix
script/: run-coverage.sh
src/: context.rs  events.rs  lib.rs  lib.rs.bak  node.rs  notifier.rs  prelude.rs  supervisor.rs  task.rs  worker.rs
src/context/: mod.rs
src/node/: leaf.rs  mod.rs  root.rs  subtree.rs
src/node/leaf/: errors.rs  opts.rs  running_leaf.rs  spec.rs
src/node/root/: node_builder.rs  opts.rs  restart_manager.rs  running_root.rs  spec.rs
src/node/subtree/: errors.rs  restart_manager.rs  running_subtree.rs  spec.rs
src/supervisor/: cleanup.rs  mod.rs  node_builder.rs  opts.rs  restart_manager.rs  running_supervisor.rs  spec.rs  subtree.rs  tests.rs
src/tests/: restart.rs  start_tests.rs  termination_tests.rs  timeout_tests.rs  workers.rs
src/tests/restart/: permanent_tests.rs  temporary_tests.rs  transient_tests.rs
src/tests/workers/: worker_trigger.rs
src/worker/: mod.rs  tests.rs
tests/: common.rs  context.rs  supervisor.rs  worker.rs
