[package]
name = "capataz"
version = "0.0.0"
authors = ["Roman Gonzalez <open-source@roman-gonzalez.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow      = { version = "1.0.31" }
chrono      = { version = "0.4.13" }
futures     = { version = "0.3.5"  }
lazy_static = { version = "1.4.0"  }
thiserror   = { version = "1.0.20" }
tokio       = { version = "0.2.22", features = ["rt-core", "sync", "macros", "time"] }

[dev-dependencies]
tokio      = { version = "0.2.22", features = ["test-util"] }
tokio-test = { version = "0.2.1" }
