[package]
name = "rust-capataz"
version = "0.0.0"
edition = "2018"

[dependencies]
anyhow = { version = "1.0.42" }
chrono = { version = "0.4.19" }
futures = { version = "0.3.15" }
lazy_static = { version = "1.4.0" }
tokio = { version = "1.7.1", features = [ "macros", "rt", "test-util", "time"] }
tokio-test = { version = "0.4.2" }
thiserror = { version = "1.0.25" }
uuid = { version = "0.8.2", features = ["v4"] }
